--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.newballariapp">
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <queries> <intent> <action android:name="android.intent.action.SENDTO" /> <data android:scheme="mailto" /> </intent> </queries>
    <application
-        android:label="newballariapp"
+        android:label="Ify"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
